--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,4 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 debug_speed = 500
+lib_deps = knolleary/PubSubClient@^2.8
